--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Tomato Timer</title>
         <meta charset="utf-8"/>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles/style.css">
     </head>
     
     <!--body code-->
@@ -37,6 +37,6 @@
         </section>  
     </body>
 
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
     
 </html>
