add continuous mode checkbox and a timer object

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <input type=number id="numberOfSession" value=1 step=1 max="8" min="1">
             </br>
 
+            Continuous mode: <input type="checkbox" id="continuousMode">
+            </br>
+
             <button id="startTimer">Start Timer</button>
 
             <button id="stopTimer">Stop Timer</button>
