--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <!--header code-->
     <head>
-        <title>Tomato Timer</title>
+        <title>Simple Timer</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="styles/style.css">
     </head>
@@ -36,7 +36,7 @@
         </section>
 
         <section id="timerSection">
-            <div id="demo">--:--</div>
+            <strong><label id="minutes">--  :   --</label></strong>
         </section> 
 
         <section id = "info">
@@ -54,5 +54,6 @@
     </body>
 
     <script src="scripts/script.js"></script>
+    <script src="scripts/worker.js"></script>
     
 </html>
