variable names changed - no change in logic or execution

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
 
         <section id="timerSection">
-            <strong><label id="minutes">--  :   --</label></strong>
+            <strong><label id="watchFace">--  :   --</label></strong>
         </section> 
 
         <section id = "info">
